--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(233,221,148,1) 100%);
 }
 .borde{
-  border: 3px solid red;
+  border-radius: 10px;
 }
 
 
