--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ body {
   color: blue;
 }
 
+
 @media (max-width: 450px) {
   #foto{
    max-height: 200px;
@@ -109,3 +110,18 @@ background: linear-gradient(90deg, rgba(147,142,150,1) 0%, rgba(29,253,94,0.9822
 background: rgb(238,174,202);
 background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(233,221,148,1) 100%);
 }
+
+.presentaciones{
+display: grid;
+grid-template-columns: 1fr 1fr;
+gap: 2em;
+justify-content: center;
+margin: 3em;
+}
+
+@media (max-width: 768px) {
+  .presentaciones {
+    grid-template-columns: 1fr;
+  }
+}
+
